switch式にしてみた